<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort" translatable="false">
    	<xliff:g id="format">%2$d:%5$02d</xliff:g>
    </string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong" translatable="false">
    	<xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g>
    </string>

    <string name="app_name">Anytime Visualizer</string>
    <string name="app_title">Anytime Visualizer</string>
    <string name="unknown">Unknown</string>
    <string name="notification_subtitle">Enjoy the music with eyes</string>
    <string name="notification_help_guide">Click here</string>
    <string name="button_showcontrol">Control</string>
    <string name="playback_failed">playback failed</string>
    <string name="emptyplaylist">empty playlist</string>
    <string name="tap_to_play">Tab here to play</string>
    <string name="anotherapp_is_playing">Music is playing in another App</string>
    <string name="visualizer_on">On</string>
    <string name="visualizer_off">Off</string>
    <string name="visualizer_setting_leftani">Animation</string>
    <string name="visualizer_setting_rightani">Animation</string>
    <string-array name="category_array">
        <item>Music</item>
        <item>Settings</item>
        <item>Help/Info</item>
    </string-array>
    <string name="timer">TIMER</string>
    <string name="checklist">CHECKLIST</string>
    <string name="settings">SETTINGS</string>
    <string name="tab_to_pick">Click</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_delete_song">delete song</string>
    <string name="action_toggle_visualizer">toggle visualizer</string>

    <string name="popup_delete_ask">Would you like to delete this song?</string>

    <string name="music_folder_title">Folder</string>
    <string name="music_folder_addtonowplay">Adding to nowplay</string>
    <string name="music_nowplaying_title">Nowplay</string>
    <string name="music_adding_tonowplay">Updating</string>
    <string name="music_button_add">ADD</string>
    <string name="music_button_reset">RESET</string>
    <string name="music_button_hahaha">^^</string>
    <string name="music_button_playall">Play all</string>
    <string name="music_button_search">Search</string>

    <string name="nosong_to_add">No song to add</string>
    <string name="under_development">It is under development ^^;</string>

    <string name="help_developer_title">* Developer</string>
    <string name="help_developer_info">E-MAIL: for1self@gmail.com\nPLACE: SEOUL, KOREA\nIf you have any question or suggestion,\nplease email me</string>
    <string name="help_version_title">* Version</string>
    <string name="help_update_info271">[v2.7.1]\n1. Support Russian by Валерий Бутнев and Turkish by Halil Kasap</string>
    <string name="help_update_info270">[v2.7.0]\n1. New feature using MIC input data for Валерий Бутнев</string>
    <string name="help_update_info263">[v2.6.3]\n1. Menu for toggling Visualizer for T.M. Wrath</string>
    <string name="help_update_info261">[v2.6.1]\n1. Option for hiding notification for Hamad Alzaabi\n2. show trackname on notification bar for Alex Haist\n3. custom gradient color for Hamad Alzaabi</string>
    <string name="help_update_info260">[v2.6.0]\n1. Link to device equalizer</string>
    <string name="help_update_info252">[v2.5.2]\n1. User custom color for John Trieu</string>
    <string name="help_update_info251">[v2.5.1]\n1. floating button for Visualizer On/Off for Валерий Бутнев</string>
    <string name="help_update_info250">[v2.5.0]\n1. Remote Control (available only above system version 4.4.2) for Marcus Kriflik</string>
    <string name="help_update_info240">[v2.4.0]\n1. Expanded fullscreen mode</string>
    <string name="help_update_info230">[v2.3.0]\n1. increased customization of visualizer\n2. fullscreen mode on landscape.</string>
    <string name="help_update_info220">[v2.2.0]\n1. function for choosing color and transparent\n2. If global visualizer does not work, modify to use local audio session id</string>
    <string name="help_update_info210">[v2.1.0]\n1. folder list</string>
    <string name="help_update_info201">[v2.0.1]\n1. nowplaying list\n2. shuffle, repeat\n3. landscape UI</string>

    <string name="help_thankto_title0">* Thanks to everyone</string>
    <string name="help_thankto_translation">You can contribute to translate this app into your language.\nPlease, let me know by email, if you are willing to help me.\n1. Russian by Валерий Бутнев\n2. Turkish by Halil Kasap</string>
    <string name="help_thankto_title1">* Thanks to icons8 team and Polina</string>
    <string name="help_thankto_freeimage">for free PNG image (www.icons8.com)  </string>
    <string name="help_thankto_title2">* Thanks to Roman Nurik</string>
    <string name="help_thankto_github">for useful code\n\"https://github.com/romannurik/Android-SwipeToDismiss/tree/master/src/com/example/android/swipedismiss\"</string>
    <string name="help_thankto_title3">* Thanks to Marcus Kriflik</string>
    <string name="help_thankto_screenshot">for allowing me to use the picture in the play store\nfor making a awesome video</string>
    <string name="help_thankto_title4">* Thanks to T.M. Wrath</string>
    <string name="help_thankto_icon">for allowing me to use the app icon</string>
    <string name="help_thankto_title5">* Thanks to everyone</string>
    <string name="help_thankto_suggestion">for giving me great suggestion</string>

    <string name="noti_local_visualizer_setting">Global visualizer does not work. switch to local visualizer</string>
    <string name="noti_global_visualizer_setting">Local visualizer does not work. switch to Global visualizer</string>

    <string name="noti_local_visualizer_setting2">switch to local visualizer using session id</string>
    <string name="noti_global_visualizer_setting2">switch to Global visualize</string>

    <string name="music_color_setting_info">Click on the center circle to choose a color</string>

    <string name="music_popup_ask_autolist_title">Nowplaying list</string>
    <string name="music_popup_ask_autolist_content">No song to play in nowplaying list. would you like to add automatically?</string>

    <string name="music_popup_visualizer_show_title">Visualizer Shown</string>
    <string name="music_popup_visualizer_show_content">Would you like to show Visualizer on the bottom of screen?</string>
    <string name="music_popup_do_not_show_again">Do not show me this message again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rainbow">Rainbow</string>
    <string name="gray">Gray</string>

    <string name="setting_vi_screen_title">* Visualizer</string>
    <string name="setting_vi_screen_onoff">Would you like to show Visualizer on the bottom of screen?</string>
    <string name="setting_vi_screen_stick">Show sticks above visualizer bars?</string>
    <string name="setting_vi_screen_battery_noti">The wider area, the more battery consumption.</string>
    <string name="setting_vi_floating_onoff">Would you like to add the button for On/Off?</string>

    <string name="setting_mic_sensitivity">Sensitivity</string>
    <string name="noti_use_mic">MIC input data</string>

    <string name="setting_extra_title">* Extra Feature</string>
    <string name="setting_rc_content">Allow this program to control an external music player</string>
    <string name="setting_usemic">Use MIC input data</string>
    <string name="toast_rc_noti_preplay">try again after playing in the media app which you want to play</string>
    <string name="toast_nocontent_toplay">No content to add nowplaying list</string>
    <string name="toast_not_available_eq">Your device does not support default equalizer</string>
    <string name="remotecontrol_title1">Connect to app</string>
    <string name="remotecontrol_title2">First, go to setting and select app</string>
    <string name="remotecontrol_title3">Available only Android Vesion 4.4.x</string>
    <string name="rc_unable_to_run">can not run the app</string>

    <string name="setting_screen_title">* SCREEN</string>
    <string name="setting_screen_backlight">Would you like to leave backlight on?</string>

    <string name="setting_noti_title">* Notification</string>
    <string name="setting_noti_hide">Would you like to hide notification player?</string>

    <string name="music_background">BG</string>
    <string name="music_albumart_size">SIZE</string>

    <string name="visualizer_setting_width">Width</string>
    <string name="visualizer_setting_height">Height</string>
    <string name="visualizer_setting_barsize">Size</string>
    <string name="visualizer_setting_alpha">Alpha</string>
    <string name="visualizer_setting_color">Color</string>
    <string name="visualizer_setting_gravity">Gravity</string>

    <string name="visualizer_select_gravity">Select gravity</string>
    <string name="visualizer_color_title">Visualizer Color</string>
    <string name="color_load_button">get color</string>

    <string name="setting_rc_select_app">Click here and select App which you want to connect to</string>

    <string name="music_popup_remote_app_content">First, you shoud run app and play music.\n\nWould you like to move to the App?</string>

    <string-array name="gravity_array">
        <item>Center</item>
        <item>Left</item>
        <item>Right</item>
    </string-array>

    <string-array name="visualizer_colorset">
        <item>Rainbow1</item>
        <item>Rainbow2</item>
        <item>Sky blue</item>
        <item>Purple</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Gray</item>
        <item>User custom</item>
    </string-array>
    <string name="color_position_both">Both</string>
    <string name="color_position_up">Up</string>
    <string name="color_position_down">Down</string>
    <string name="remotecontrol_not_support">죄송합니다. 사용하시는 폰에서 remotecontrol 을 지원하지 않을 가능성이 있습니다.</string>

    <string name="music_library_tab_title_track">Track</string>
    <string name="music_library_tab_title_album">Album</string>
    <string name="music_library_tab_title_artist">Artist</string>
    <string name="music_library_tab_title_folder">Folder</string>

    <string name="music_playback_menuButton_toList">To Library</string>

    <string name="music_playback_menuButton_settings">Settings</string>
    <string name="music_playback_menuButton_nowPlaying">NowPlaying</string>

    <string name="nowPlaying_noContent_text">현재 재생중인 음악이 없습니다.</string>

    <string name="bottom_nav_track" translatable="false">트랙</string>
    <string name="bottom_nav_album" translatable="false">앨범</string>
    <string name="bottom_nav_artist" translatable="false">아티스트</string>
    <string name="bottom_nav_folder" translatable="false">폴더</string>

    <string name="action_bar_track" translatable="false">트랙 선택</string>
    <string name="action_bar_album" translatable="false">앨범 선택</string>
    <string name="action_bar_artist" translatable="false">아티스트 선택</string>
    <string name="action_bar_folder" translatable="false">폴더 선택</string>

    <string name="menu_settings" translatable="false">세팅</string>
    <string name="menu_information" translatable="false">정보</string>
    <string name="menu_audio_library" translatable="false">오디오 라이브러리</string>

    <string name="bottom_menu_play" translatable="false">재생</string>
</resources>