<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@android:color/black">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dip"
    	android:padding="5dip"
        android:background="#70000000"
        android:orientation="vertical">
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_developer_title"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_developer_info"/>
        <ImageView 
            android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:src="@drawable/developer"/>       
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dip"
    	android:padding="5dip"
        android:background="#70000000"
        android:orientation="vertical">
         <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title0"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_translation"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title1"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_freeimage"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title2"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_github"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title3"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_screenshot"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title4"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_icon"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_thankto_title5"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_thankto_suggestion"/>
    </LinearLayout>   
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dip"
    	android:padding="5dip"
        android:background="#70000000"
        android:orientation="vertical">
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			android:textStyle="bold"
			android:text="@string/help_version_title"/>
        <TextView
			android:id="@+id/help_version_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:textStyle="bold"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info271"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info270"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info263"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info261"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info260"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info252"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info251"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info250"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info240"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info230"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info220"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info210"/>
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			android:text="@string/help_update_info201"/>
    </LinearLayout>     
	</LinearLayout>
</ScrollView>
