<?xml version="1.0" encoding="utf-8" ?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/media_nav_graph"
    app:startDestination="@id/mediaTrackFragment">

    <fragment
        android:id="@+id/mediaTrackFragment"
        android:name="anytime.visualizer.feature.audio.AudioTrackFragment"
        android:label="@string/action_bar_track"
        tools:layout="@layout/fragment_audio_track" />
    <fragment
        android:id="@+id/mediaAlbumFragment"
        android:name="anytime.visualizer.feature.audio.AudioAlbumFragment"
        android:label="@string/action_bar_album"
        tools:layout="@layout/fragment_audio_album" />
    <fragment
        android:id="@+id/mediaArtistFragment"
        android:name="anytime.visualizer.feature.audio.AudioArtistFragment"
        android:label="@string/action_bar_artist"
        tools:layout="@layout/fragment_audio_artist" />
    <fragment
        android:id="@+id/mediaFolderFragment"
        android:name="anytime.visualizer.feature.audio.AudioFolderFragment"
        android:label="@string/action_bar_folder"
        tools:layout="@layout/fragment_audio_folder" />
</navigation>