<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@android:color/black">
    <ScrollView 
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
    	<LinearLayout
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">
			<!--
    		<LinearLayout
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="5dip"
		    	android:padding="5dip"
		        android:background="#70000000"
		        android:orientation="vertical">s
		        <TextView 
		            android:layout_width="match_parent"
		    	    android:layout_height="wrap_content"
		    	    android:textColor="@android:color/white"
					android:textSize="16sp"
					android:textStyle="bold" 
		    	    android:text="@string/setting_extra_title"
		    	    android:layout_marginBottom="10dip"/>
				<CheckBox
					android:id="@+id/setting_usemic"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/setting_usemic"
					android:layout_marginBottom="5dip"/>
				<LinearLayout
					android:id="@+id/setting_mic_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center_vertical"
					android:layout_marginBottom="10dip"
					android:visibility="gone">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/setting_mic_sensitivity"/>
					<SeekBar
						android:id="@+id/setting_mic_sensitivity"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
				</LinearLayout>
		        <CheckBox
		    	    android:id="@+id/setting_rc_onoff"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/setting_rc_content"
		    	    android:layout_marginBottom="5dip"/>
		        <LinearLayout
		            android:id="@+id/setting_rc_app_layout"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:gravity="center_vertical"
		            android:layout_marginBottom="10dip">
		            <ImageView 
			            android:id="@+id/setting_rc_app_icon"
			    	    android:layout_width="30dip"
			    	    android:layout_height="30dip"
			    	    android:layout_marginLeft="5dip"
			    	    android:layout_marginRight="5dip"/>		            
			    	<TextView 
			    	    android:id="@+id/setting_rc_app_name" 
			    	    android:layout_width="match_parent"
			    	    android:layout_height="wrap_content"
			    	    android:text="@string/setting_rc_select_app"
			    	    android:textSize="16sp"/>
		        </LinearLayout>
	    	</LinearLayout>
			-->
	    	<LinearLayout
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="5dip"
		    	android:padding="5dip"
		        android:background="#70000000"
		        android:orientation="vertical">
		        <TextView
		            android:layout_width="match_parent"
		    	    android:layout_height="wrap_content"
		    	    android:textColor="@android:color/white"
					android:textSize="16sp"
					android:textStyle="bold"
		    	    android:text="@string/setting_screen_title"
		    	    android:layout_marginBottom="10dip"/>
		        <CheckBox
		    	    android:id="@+id/setting_backlight_onoff"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/setting_screen_backlight"
		    	    android:layout_marginBottom="10dip"/>
	    	</LinearLayout>
	    	<LinearLayout
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="5dip"
		    	android:padding="5dip"
		        android:background="#70000000"
		        android:orientation="vertical">
		        <TextView 
		            android:layout_width="match_parent"
		    	    android:layout_height="wrap_content"
		    	    android:textColor="@android:color/white"
					android:textSize="16sp"
					android:textStyle="bold" 
		    	    android:text="@string/setting_noti_title"
		    	    android:layout_marginBottom="10dip"/>
		        <CheckBox
		    	    android:id="@+id/setting_noti_hide"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/setting_noti_hide"
		    	    android:layout_marginBottom="10dip"/>
	    	</LinearLayout>
    	    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dip"
		    	android:padding="5dip"
		        android:background="#70000000"
		        android:orientation="vertical">
		        <TextView 
		            android:layout_width="match_parent"
		    	    android:layout_height="wrap_content"
		    	    android:textColor="@android:color/white"
					android:textSize="16sp"
					android:textStyle="bold" 
		    	    android:text="@string/setting_vi_screen_title"/>
		        <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dip"
	                android:textSize="12sp"
	                android:textColor="#ffffff"
	                android:text="@string/setting_vi_screen_battery_noti"/>
		        <CheckBox
		    	    android:id="@+id/setting_vi_screen_onoff"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:text="@string/setting_vi_screen_onoff"
		    	    android:layout_marginBottom="10dip"/>	
		    	<LinearLayout 
		    	    android:id="@+id/setting_vi_submenu"
		    	    android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:orientation="vertical">
			    	<CheckBox
			    	    android:id="@+id/setting_vi_screen_stick"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:text="@string/setting_vi_screen_stick"
			    	    android:layout_marginBottom="10dip"/>      
			    	<CheckBox
			    	    android:id="@+id/setting_vi_floating_onoff"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:text="@string/setting_vi_floating_onoff"
			    	    android:layout_marginBottom="10dip"/>
			    	<LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_color"/>
			            <Button 
			                android:id="@+id/setting_vi_color"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:layout_marginStart="10dip"
				            android:layout_marginLeft="10dip"
				            android:layout_marginEnd="10dip"
				            android:layout_marginRight="10dip"
				            android:textSize="16sp"/>
			        </LinearLayout>  
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_height"/>
			            <SeekBar 
				            android:id="@+id/setting_vi_height"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"/>
			        </LinearLayout>
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_width"/>
			            <SeekBar 
				            android:id="@+id/setting_vi_width"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"/>
			        </LinearLayout>
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_barsize"/>
			            <SeekBar 
				            android:id="@+id/setting_vi_barratio"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"/>
			        </LinearLayout>
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_alpha"/>
			            <SeekBar 
				            android:id="@+id/setting_vi_transparency"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"/>
			        </LinearLayout>
			        <LinearLayout 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="horizontal"
			            android:gravity="center"
			            android:layout_marginBottom="10dip">
			            <TextView style="@style/setting_info_text"
			                android:layout_width="40dip"
			                android:layout_height="wrap_content"		                
			                android:text="@string/visualizer_setting_gravity"/>
			            <Button 
			                android:id="@+id/setting_vi_gravity"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:text="@string/select"
				            android:layout_marginStart="20dip"
				            android:layout_marginLeft="20dip"
				            android:layout_marginEnd="20dip"
				            android:layout_marginRight="20dip"
				            android:textSize="16sp"/>
			        </LinearLayout>
			    </LinearLayout>	
		    </LinearLayout>		    
    	</LinearLayout>    	
    </ScrollView>   	
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
        android:orientation="vertical">        
        <LinearLayout
		   	android:id="@+id/setting_floating_onoff_layout"
		    android:layout_width="wrap_content"
		    android:layout_height="40dip"
			android:orientation="horizontal"
			android:gravity="center"
		    android:visibility="gone"
			android:background="@drawable/button_bg">
			<ImageView 
		        android:layout_width="30dip"
		        android:layout_height="30dip"
		        android:src="@drawable/microphone_off"
				android:visibility="gone"/>
			<ImageView
				android:layout_width="30dip"
				android:layout_height="30dip"
				android:layout_margin="5dip"
				android:src="@drawable/noti_visualizer_off"/>
		</LinearLayout>
		<noh.jinil.app.anytime.visualizer.VisualizerMiniView 
	   	    android:id="@+id/setting_vi_preview"
	   	    android:layout_width="wrap_content" 
	   	    android:layout_height="80dip"
	   	    android:background="#30ffffff"/>
    </LinearLayout>
</RelativeLayout>